--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </div>
         <div class="row">
           <div class="col-4 my-auto">
-            <a href="http://www.bbc.com/news/world-africa-33810273"><img src="img/cowries-2.jpg" class="img-fluid" alt=""></a>
+            <a href="http://www.bbc.com/news/world-africa-33810273"><img src="img/cowries.jpg" class="img-fluid" alt=""></a>
           </div>
           <div class="col-8 my-auto">
 			<p class="right">In African society, most cultures made the future husband give stacks of cowries until the wife or her family is satisfied with the amount. In the Umuofian society, this is pretty much reversed. Both families bargain until a price is reached. They do not believe that women should have any sort of power over a man in the Umuofian society. Cowries are the currency that is used in the society and are used in matters like bride pricing.<br><br>The bargaining is done using sticks. A certain amount of sticks is given to the man’s family and they return with the amount that they feel is appropriate. This process continues until a certain amount of sticks is decided on. This process happened in the book when Obierika was bargaining his daughter; the event was very tense and Achebe seemed to emphasize its importance. More information can be found <a href="http://www.bbc.com/news/world-africa-33810273">here</a>.</p>
