--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 	<section class="bg-primary" id="bride-pricing">
       <div class="container">
         <div class="section-heading text-center">
-          <h2>Bridge Pricing</h2>
+          <h2>Bride Pricing</h2>
           <hr>
         </div>
         <div class="row">
