--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h1 class="mb-5">Things Fall Together</h1>
+              <h1 class="mb-5" style="margin-bottom: 0!important;">Things Fall Together</h1>
+			  <h4 class="mb-5">Artifacts to help the book come together</h4>
 			  <h3 class="mb-5">By Isaac Buckman, Varun Tupuri, Caleb Thorpe, and Kara Lui</h3>
             </div>
           </div>
@@ -225,7 +226,7 @@
         <p>&copy; Things Fall Together 2018. All Rights Reserved.</p>
         <ul class="list-inline">
           <li class="list-inline-item">
-            <a style="font-size: 2em;" href="workscited.html" target="_blank">Works Cited</a>
+            <a style="font-size: 2em;" href="workscited.html" target="_blank">Words Cited</a>
           </li>
         </ul>
       </div>
