--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <p>&copy; Things Fall Together 2018. All Rights Reserved.</p>
         <ul class="list-inline">
           <li class="list-inline-item">
-            <a style="font-size: 2em;" href="workscited.html" target="_blank">Words Cited</a>
+            <a style="font-size: 2em;" href="workscited.html" target="_blank">Works Cited</a>
           </li>
         </ul>
       </div>
