--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 			<li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#odinani">Odinani</a>
             </li>
+	    </li>
+			<li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="workscited.html">Works Cited</a>
+            </li>
           </ul>
         </div>
       </div>
