--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </li>
 	    </li>
 			<li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="workscited.html">Works Cited</a>
+              <a class="nav-link js-scroll-trigger" href="workscited.html" target="_blank">Works Cited</a>
             </li>
           </ul>
         </div>
